--- a/.travis.yml
+++ b/.travis.yml
@@ -18,10 +18,13 @@ before_install:
   - docker login --username $HEROKU_USERNAME --password $HEROKU_API_KEY registry.heroku.com
 install:
   # install deps
-  # - yarn install
+  - pip3 install requirements.txt
+  - pip3 install coverage
+  - pip3 install coveralls
 script:
-  #- yarn test
-  #- yarn build
+  - coverage run --source='.' ./manage.py test
+  # Code coverage
+  - coverage report
   # build docker images
   - docker image build -t $HEROKU_APP_NAME .
   - docker images
@@ -33,6 +36,8 @@ script:
   - docker push registry.heroku.com/$HEROKU_APP_NAME/web
   - docker push $DOCKER_USERNAME/$HEROKU_APP_NAME:latest
   - heroku stack:set container -a $HEROKU_APP_NAME
+after_scripts:
+  - coveralls
 deploy:
   provider: script
   script:
