--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,9 @@ services:
   web:
     build: .
     image: favorite-things-back:latest
-    command: python3 /code/api/manage.py runserver 0.0.0.0:8000
+    stdin_open: true
+    tty: true
+    command: python3 /code/manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/code
     ports:
