--- a/.travis.yml
+++ b/.travis.yml
@@ -18,10 +18,11 @@ before_install:
   - docker login --username $HEROKU_USERNAME --password $HEROKU_API_KEY registry.heroku.com
 install:
   # install deps
-  - pip3 install requirements.txt
+  - pip3 install -r requirements.txt
   - pip3 install coverage
   - pip3 install coveralls
 script:
+  - python3 manage.py migrate
   - coverage run --source='.' ./manage.py test
   # Code coverage
   - coverage report
@@ -43,4 +44,8 @@ deploy:
   script:
     # run container in heroku
     heroku container:release web -a $HEROKU_APP_NAME
-  branch: master
+  branch:
+    - master
+    - develop
+addons:
+  postgresql: "9.6"
