ft(customuser)add post customuser  - add viewsets, model, serializers  - add tests for customuser  - refactor favorites viewsets to use customuser

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,6 @@ services:
 env:
   DOCKER_COMPOSE_VERSION: 3.0
 before_install:
-  # update Docker
-  # - sudo rm /usr/local/bin/docker-compose
-  # - sudo curl -L "https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-  # - sudo chmod +x /usr/local/bin/docker-compose
   # install heroku cli
   - wget -qO- https://toolbelt.heroku.com/install.sh | sh
   # login to docker registries (dockerhub + heroku)
@@ -44,8 +40,6 @@ deploy:
   script:
     # run container in heroku
     heroku container:release web -a $HEROKU_APP_NAME
-  branch:
-    - master
-    - develop
+  branch: ft-custom-user-views
 addons:
   postgresql: "9.6"
