--- a/.travis.yml
+++ b/.travis.yml
@@ -2,17 +2,26 @@ language: python
 python:
   - "3.6"
 install:
-  # install deps
+  # install dependencies
   - pip3 install -r requirements.txt
   - pip3 install coverage
   - pip3 install coveralls
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
 script:
+  #run migrations
   - python3 manage.py migrate
   - coverage run --source='.' ./manage.py test
   # Code coverage
   - coverage report
 after_scripts:
   - coveralls
+after_success:
+  - ./cc-test-reporter format-coverage -t lcov -o coverage/codeclimate.frontend.json test/unit/coverage/lcov.info
+  - ./cc-test-reporter sum-coverage coverage/codeclimate.*.json -p 1
+  - ./cc-test-reporter upload-coverage
 deploy:
   provider: heroku
   api_key:
